--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
                 <h1 class="profile-bio-title">Daniel's Links</h1>
                 <h2 class="profile-bio-subtitle">Full Stack Developer & Cyber-security enthusiastic</h2>
                 <p class="profile-bio-description">
-                    Wake up - Eat- Code - Sleep - <span>Repeat</span>
+                    Wake up - Eat - Code - Sleep - <span>Repeat</span>
                 </p>
             </div>
         </header>
         <main>
             <nav>
                 <ul class="links">
-                    <li><a href="">
+                    <li><a href="https://www.linkedin.com/in/daniel-cardoso-052b9721a/" target="_blank">
                         <img src="./src/img/icons/linkedin.svg" alt="LinkedIn Logo">
                     </a></li>
-                    <li><a href="">
+                    <li><a href="https://x.com/crimsonglade9" target="_blank">
                         <img src="./src/img/icons/twitter.svg" alt="Twitter Logo">
                     </a></li>
-                    <li><a href="">
+                    <li><a href="https://github.com/danieltwentynine" target="_blank">
                         <img src="./src/img/icons/github.svg" alt="Github Logo">
                     </a></li>
-                    <li><a href="">
+                    <li><a href="mailto:danielmcardoso2016@protonmail.com?subject=Hello Daniel!">
                         <img src="./src/img/icons/at-sign.svg" alt="My E-mail">
                     </a></li>
                 </ul>
@@ -40,18 +40,28 @@
             <nav>
                 <ul class="projects-list">
                     <li class="projects-list-item">
-                        <a href="">
+                        <a href="https://daniel-cardoso-calculadora-de-medias.vercel.app/" target==_blank>
                             Visite o projeto: Calculadora de Média Escolar
                         </a>
                     </li>
                     <li class="projects-list-item">
-                        <a href="">
-                            Visite o projeto: Lista de Contatos
+                        <a href="https://daniel-cardoso-agenda-de-contatos.vercel.app/" target="_blank">
+                            Visite o projeto: Agenda de Contatos
                         </a>
                     </li>
                     <li class="projects-list-item">
-                        <a href="">
-                            Visite o projeto: Lista de Tarefas
+                        <a href="https://todo-list-theta-coral-81.vercel.app/" target="_blank">
+                            Visite o projeto: To-do List
+                        </a>
+                    </li>
+                    <li class="projects-list-item">
+                        <a href="https://learn-chess.vercel.app/" target="_blank">
+                            Visite o projeto: Chess learning page
+                        </a>
+                    </li>
+                    <li class="projects-list-item">
+                        <a href="https://sorteadorgruntdaniel-six.vercel.app/" target="_blank">
+                            Visite o projeto: Sorteador online de números
                         </a>
                     </li>
                 </ul>
