--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <nav>
                 <ul class="projects-list">
                     <li class="projects-list-item">
-                        <a href="https://daniel-cardoso-calculadora-de-medias.vercel.app/" target==_blank>
-                            Visite o projeto: Calculadora de Média Escolar
+                        <a href="https://fight-club-bydanielcardoso.vercel.app/" target="_blank">
+                            Fight Club Movie Landing Page
                         </a>
                     </li>
                     <li class="projects-list-item">
-                        <a href="https://daniel-cardoso-agenda-de-contatos.vercel.app/" target="_blank">
-                            Visite o projeto: Agenda de Contatos
+                        <a href="https://clone-disneyplus-xi-ten.vercel.app/" target="_blank">
+                            Disney+ website clone
                         </a>
                     </li>
                     <li class="projects-list-item">
