adding EBAC Tech Talks Landing Page

--- a/index.html
+++ b/index.html
@@ -50,18 +50,23 @@
                         </a>
                     </li>
                     <li class="projects-list-item">
+                        <a href="https://ebac-talks-opal.vercel.app" target="_blank">
+                            Landing Page EBAC Tech Talks
+                        </a>
+                    </li>
+                    <li class="projects-list-item">
                         <a href="https://todo-list-theta-coral-81.vercel.app/" target="_blank">
                             Visite o projeto: To-do List
                         </a>
                     </li>
                     <li class="projects-list-item">
                         <a href="https://learn-chess.vercel.app/" target="_blank">
-                            Visite o projeto: Chess learning page
+                            Learn Chess Webpage
                         </a>
                     </li>
                     <li class="projects-list-item">
                         <a href="https://sorteadorgruntdaniel-six.vercel.app/" target="_blank">
-                            Visite o projeto: Sorteador online de números
+                            Sorteador de Números
                         </a>
                     </li>
                 </ul>
